src copy/objects/Forms_API_Service__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>URL, username and password for the Forms API Service.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to have the code use this instance of the custom setting. Check on only one instance. Allows values for DEV, PROD, etc to exist in one org.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>Used in the HTTP basic auth header sent in all requests to the Forms API Service.</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopService__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevent to continue pushing Forms to API. PLEASE BE AWERE IF TRUE NO FORMS WILL BE SEND TO CHIPS</inlineHelpText>
        <label>Stop Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>Full URL of the server, including scheme and path.</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <inlineHelpText>Used in the HTTP basic auth header sent in all requests to the Forms API Service.</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Forms API Service</label>
</CustomObject>